use cxx_under_test over compiler found in $PATH

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -182,7 +182,7 @@ if cxx_under_test is None:
 
     # If no specific cxx_under_test was given, attempt to infer it as clang++.
     clangxx = lit.util.which('clang++', config.environment['PATH'])
-    if clangxx is not None:
+    if cxx_under_test is None and clangxx is not None:
         cxx_under_test = clangxx
         lit_config.note("inferred cxx_under_test as: %r" % (cxx_under_test,))
 if cxx_under_test is None:
