--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -214,6 +214,19 @@ if cxx_has_stdcxx0x_flag_str is not None:
 else:
     cxx_has_stdcxx0x_flag = getattr(config, 'cxx_has_stdcxx0x_flag', True)
 
+# global linker flags, like -B
+exe_linker_flags = lit_config.params.get('exe_linker_flags', None)
+if exe_linker_flags is None:
+    exe_linker_flags = getattr(config, 'exe_linker_flags', '')
+exe_linker_flags = exe_linker_flags.split(' ')
+lit_config.note("inferred exe_linker_flags as: %r" % (exe_linker_flags,))
+
+cxx_flags = lit_config.params.get('cxx_flags', None)
+if cxx_flags is None:
+    cxx_flags = getattr(config, 'cxx_flags', '')
+cxx_flags = cxx_flags.split(' ')
+lit_config.note("inferred cxx_flags as: %r" % (cxx_flags,))
+
 # This test suite supports testing against either the system library or the
 # locally built one; the former mode is useful for testing ABI compatibility
 # between the current headers and a shipping dynamic library.
@@ -248,7 +261,31 @@ if link_flags_str is None:
         lit_config.fatal('C++ ABI setting %s unsupported for tests' % cxx_abi)
 
       if sys.platform == 'darwin':
+        # need libgcc_s for libunwind
+        darwin_vers = int(platform.release().split('.')[0])
+        osx_vers_maj = '.'.join(platform.mac_ver()[0].split('.')[0:2])
+        if darwin_vers < 11:
+          link_flags += ['.'.join(['-lgcc_s', osx_vers_maj])]
+        # need libclang_rt for eprintf
+        arch = platform.processor()
+        if arch == 'powerpc':
+          arch = 'ppc'
+        libcrt = '.'.join(['libclang_rt', arch, 'a'])
+        cmd = [cxx_under_test, '-print-search-dirs']
+        p = subprocess.Popen(cmd, stdout=subprocess.PIPE)
+        out,err = p.communicate()
+        exitCode = p.wait()
+        # should probably check exitCode
+        for l in out.splitlines():
+          ll = l.split(' ')
+          if ll[0] == 'libraries:':
+            crt_libdir = ll[1][1:]
+        
+        link_flags += [os.path.join(crt_libdir, 'lib', sys.platform, libcrt)]
         link_flags += ['-lSystem']
+        # better yet, test existence of SystemStubs
+        if darwin_vers < 11:
+          link_flags += ['-lSystemStubs']
       elif sys.platform == 'linux2':
         link_flags += [ '-lgcc_eh', '-lc', '-lm', '-lpthread',
               '-lrt', '-lgcc_s']
@@ -282,8 +319,8 @@ else:
 
 config.test_format = LibcxxTestFormat(
     cxx_under_test,
-    cpp_flags = ['-nostdinc++'] + compile_flags + include_paths,
-    ld_flags = ['-nodefaultlibs'] + library_paths + ['-lc++'] + link_flags,
+    cpp_flags = cxx_flags + ['-nostdinc++'] + compile_flags + include_paths,
+    ld_flags = exe_linker_flags + ['-nodefaultlibs'] + library_paths + ['-lc++'] + link_flags,
     exec_env = exec_env)
 
 # Get or infer the target triple.
