fixes for darwin10, cmath: force long long returning functions to be available

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -264,8 +264,10 @@ if link_flags_str is None:
         # need libgcc_s for libunwind
         darwin_vers = int(platform.release().split('.')[0])
         osx_vers_maj = '.'.join(platform.mac_ver()[0].split('.')[0:2])
-        if darwin_vers < 11:
+        if darwin_vers < 10:
           link_flags += ['.'.join(['-lgcc_s', osx_vers_maj])]
+        elif darwin_vers < 11:
+          link_flags += ['-lgcc_s.1']
         # need libclang_rt for eprintf
         arch = platform.processor()
         if arch == 'powerpc':
