update reference to libclang_rt builtin libraries, built by compiler-rt

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -272,7 +272,7 @@ if link_flags_str is None:
         arch = platform.processor()
         if arch == 'powerpc':
           arch = 'ppc'
-        libcrt = '.'.join(['libclang_rt', arch, 'a'])
+        libcrt = '.'.join(['libclang_rt', '-'.join(['builtins', arch]), 'a'])
         cmd = [cxx_under_test, '-print-search-dirs']
         p = subprocess.Popen(cmd, stdout=subprocess.PIPE)
         out,err = p.communicate()
